--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             </div>
             <div class="divider"></div>
         </div>
-        <div>No Alarms Set.</div>
+        <div class="alarm-count">No Alarms Set.</div>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <script language="javascript" type="text/javascript" src="js/clock.js"></script>
