Added 5 day weather forecast using forecast.io api and geolocation.

--- a/index.html
+++ b/index.html
@@ -16,10 +16,16 @@
             <div class="divider"></div>
         </div>
         <div class="alarm-count">No Alarms Set.</div>
-
+        <div class="weather-container">
+            <div class="weather" id="day0"></div>
+            <div class="weather" id="day1"></div>
+            <div class="weather" id="day2"></div>
+            <div class="weather" id="day3"></div>
+            <div class="weather" id="day4"></div>
+        </div>
+        
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <script language="javascript" type="text/javascript" src="js/clock.js"></script>
+        <script language="javascript" type="text/javascript" src="js/weather.js"></script>
     </body>
 </html>
-
-<div id="foo"></div>
