--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     // for FB.getLoginStatus().
     if (response.status === 'connected') {
       // Logged into your app and Facebook.
-      testAPI();
+      startApp();
     } else if (response.status === 'not_authorized') {
       // The person is logged into Facebook, but not your app.
       document.getElementById('status').innerHTML = 'Please log ' +
@@ -172,9 +172,8 @@
       console.log('Successful login for: ' + response.name);
       document.getElementById('status').innerHTML =
         'Thanks for logging in, ' + response.name + '!';
-      getAllAlarms(response.id);    
     });
-  }
+  };
 
     function startApp() {  
         var getUser = fbUser(function(model){
@@ -185,9 +184,9 @@
 
     function fbUser(callback){  
         FB.api('/me', function(response){
-        callback(response);
-    });
-}       
+            callback(response);
+        });
+    };       
   
 </script>
 
