--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
             <fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
             </fb:login-button>
-
+            <button onclick="logout()">logout</button>
             <div id="status">
             </div>
             <div class="new-alarm" onclick="showAlarmPopup()">
