Added optimizely script.

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
         
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <script src="//www.parsecdn.com/js/parse-1.3.4.min.js"></script>
+        <script src="//cdn.optimizely.com/js/2561330290.js"></script>
         <script language="javascript" type="text/javascript" src="js/clock.js"></script>
         <script language="javascript" type="text/javascript" src="js/weather.js"></script>
         <script language="javascript" type="text/javascript" src="js/alarm.js"></script>
