--- a/index.html
+++ b/index.html
@@ -72,6 +72,16 @@
         </div>
         
         </div>
+        <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-60159889-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
         <script src="js/optimizely.js"></script>        
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <script src="//www.parsecdn.com/js/parse-1.3.4.min.js"></script>
