--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
   ga('send', 'pageview');
 
 </script>
-        <script src="js/optimizely.js"></script>        
+        <script src="//cdn.optimizely.com/js/2561330290.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <script src="//www.parsecdn.com/js/parse-1.3.4.min.js"></script>
         <script language="javascript" type="text/javascript" src="js/clock.js"></script>
