--- a/oauth/oauth.html
+++ b/oauth/oauth.html
@@ -1,2 +1,2 @@
 <button id="login" onclick="login()">LOGIN</button>
-<script language="javascript" type="text/javascript" src="oauth.js"></script>
+<script language="javascript" type="text/javascript" src="lib/oauth.js"></script>
