--- a/oauth/oauth.html
+++ b/oauth/oauth.html
@@ -1,2 +1,3 @@
 <button id="login" onclick="login()">LOGIN</button>
+<script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
 <script language="javascript" type="text/javascript" src="lib/oauth.js"></script>
